Extend Put handler test & return 204 instead of 200